--- a/client/index.jade
+++ b/client/index.jade
@@ -12,11 +12,10 @@ html(lang="zh-cmn-Hans")
     section#wrapper
     script(src="js/jquery.min.js")
     script(src="js/jquery.touchSwipe.min.js")
-    script(src="js/react.js")
-    script(src="js/JSXTransformer.js")
+    script(src="js/react.min.js")
     script(src="js/moment.min.js")
     script(src="photoswipe/photoswipe.min.js")
     script(src="photoswipe/photoswipe-ui-default.min.js")
-    script(type="text/jsx" src="js/photoswipe-root.jsx")
-    script(type="text/jsx" src="js/page.jsx")
-    script(type="text/jsx" src="js/script.jsx")
+    script(src="js/photoswipe-root.js")
+    script(src="js/page.js")
+    script(src="js/script.js")
